--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .input-text {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -117,7 +117,7 @@ input,button{
   width: 226px;
 }
 .list-item > .input-text {
-  width: 226px
+  width: 226px;
 }
 .delete-icon {
   height: 2em;
@@ -130,18 +130,18 @@ input,button{
 
 /* Completed */
 #completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list-item .input-text {
-  display: none
+  display: none;
 }
 
 .edit-mode .input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-label {
