refactor(extended-2.1): update CSS naming to match BEM (and adjust the JS file to maintain functionality)

--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@
   display: block;
   text-align: right;
 }
-.header .header-img {
+.header__img {
   width: 100%;
   display: block;
 }
-.header .more-info {
+.header__link {
   font-family: "fantasy", cursive;
 }
-.section-add {
+.section_add-item {
   margin: 16px 0;
 }
 
@@ -31,13 +31,13 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task-label,
-.input-text {
+.section__task-label,
+.section__input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.section__task-wrapper {
   margin-top: 20px;
   display: flex;
 }
@@ -54,7 +54,7 @@ input,
 button {
   outline: none;
 }
-.btn {
+.section__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -63,11 +63,11 @@ button {
   font-family: "Lato", sans-serif;
   cursor: pointer;
 }
-.btn:hover {
+.section__btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.section-title {
+.section__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -76,7 +76,7 @@ button {
   margin: 0;
   text-transform: uppercase;
 }
-.input-text {
+.section__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -88,21 +88,17 @@ button {
   font-family: "Lato", sans-serif;
   color: #888;
 }
-.input-text:focus {
+.section__input-text:focus {
   color: #333;
 }
 
 /* New Task */
-.section-add .section-title {
-  display: block;
-  margin: 0 0 20px;
-}
-#new-task {
+.section__input-text_new {
   width: 318px;
 }
 
 /* Task list */
-.list-item {
+.section__list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -110,58 +106,58 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-.list-item > * {
+.section__list-item > * {
   vertical-align: middle;
 }
 
-.input-checkbox {
+.section__input-checkbox {
   margin: 0 10px;
 }
-.task-label {
+.section__task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list-item > .input-text {
+.section__list-item > .section__input-text {
   width: 226px;
 }
-.delete {
+.section__btn_delete {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.delete-icon {
+.section__btn-icon {
   display: block;
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete-icon:hover {
+.section__btn-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .task-label {
+.section_completed .section__task-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.list-item .input-text {
+.section__list-item .section__input-text {
   display: none;
 }
 
-.edit-mode .input-text {
+.section__list-item_edit-mode .section__input-text {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-label {
+.section__list-item_edit-mode .section__task-label {
   display: none;
 }
 
-.hidden {
+.header__title_hidden {
   position: absolute;
   visibility: hidden;
   transform: scale(0);
