fix: replace font family for the link in the header to correspond the app design (no-rule)

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   display: block;
 }
 .header__link {
-  font-family: "fantasy", cursive;
+  font-family: "Papyrus", cursive;
 }
 .section_add-item {
   margin: 16px 0;
