--- a/style.css
+++ b/style.css
@@ -1,111 +1,135 @@
-/* Basic Style */
+/* Reset default styles */
+
+h1,
+h2,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
+/* Body and Main styles */
+
 .body {
   background-color: #f8f8f8;
-  color: #333;
+  color: #333333;
   font-family: "Lato", sans-serif;
 }
+
+.container {
+  display: block;
+  width: 500px;
+  margin: 0 auto;
+}
+
+/* Header styles */
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header__img {
   width: 100%;
   display: block;
 }
+
 .header__link {
   font-family: "Papyrus", cursive;
 }
+
+.header__title_hidden {
+  position: absolute;
+  visibility: hidden;
+  transform: scale(0);
+}
+
+/* Sections styles */
+
 .section_add-item {
   margin: 16px 0;
 }
 
-@media (max-width: 768px) {
-  .header {
-    text-align: center;
-  }
+.section__task-wrapper {
+  margin-top: 20px;
+  display: flex;
 }
-.container {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
+
 .section__task-label,
 .section__input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.section__task-wrapper {
-  margin-top: 20px;
-  display: flex;
-}
-h1,
-h2,
-ul {
-  margin: 0;
-  padding: 0px;
-}
-li {
-  list-style: none;
-}
-input,
-button {
-  outline: none;
-}
+
 .section__btn {
   background: none;
-  border: 0px;
-  color: #888;
+  border: 0;
+  color: #888888;
   font-size: 15px;
   width: 60px;
   font-family: "Lato", sans-serif;
   cursor: pointer;
 }
+
 .section__btn:hover {
   color: #3a3a3a;
 }
-/* Heading */
+
 .section__title {
-  color: #333;
+  color: #333333;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid #333333;
   padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
 }
+
 .section__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
   height: 19px;
   padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #fff;
+  border: 1px solid #dddddd;
+  background: #ffffff;
   border-radius: 6px;
   font-family: "Lato", sans-serif;
-  color: #888;
+  color: #888888;
 }
+
 .section__input-text:focus {
-  color: #333;
+  color: #333333;
 }
 
 /* New Task */
+
 .section__input-text_new {
   width: 318px;
 }
 
-/* Task list */
+/* Task List */
+
 .section__list-item {
   overflow: hidden;
   padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eeeeee;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .section__list-item > * {
   vertical-align: middle;
 }
@@ -113,37 +137,44 @@ button {
 .section__input-checkbox {
   margin: 0 10px;
 }
+
 .section__task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .section__list-item > .section__input-text {
   width: 226px;
 }
+
 .section__btn_delete {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .section__btn-icon {
   display: block;
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .section__btn-icon:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
+/* Completed Tasks */
+
 .section_completed .section__task-label {
   text-decoration: line-through;
-  color: #888;
+  color: #888888;
 }
 
 /* Edit Task */
+
 .section__list-item .section__input-text {
   display: none;
 }
@@ -157,8 +188,10 @@ button {
   display: none;
 }
 
-.header__title_hidden {
-  position: absolute;
-  visibility: hidden;
-  transform: scale(0);
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
+  }
 }
